--- a/task1 (X-O)/style2.css
+++ b/task1 (X-O)/style2.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body {
     font-family: 'Press Start 2P', cursive;
     display: flex;
@@ -6,8 +7,10 @@ body {
     background-color: #03073B;
     height: 100vh;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     margin: 0;
+    overflow-x: hidden; 
+    overflow-y: auto; 
 }
 
 body::before {
@@ -24,19 +27,22 @@ body::before {
 }
 
 .game-container {
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-around;
     gap: 30px;
     width: 90%;
     max-width: 450px;
     background-color: rgba(0, 0, 0, 0.2);
-    height: 85vh;
+    height: fit-content;
     padding: 25px;
     border: 3px solid #2CFEFF;
     border-radius: 20px;
     box-shadow: 0 0 30px #00f;
+    /* margin-top: 60px; */
+    margin: auto;
+    transition-duration: 200ms;
 }
 
 .players {
@@ -63,6 +69,7 @@ body::before {
 .player-1 {
     border: 3px solid #1DD5ED;
     box-shadow: 0 0 20px #1DD5ED;
+
 }
 
 .player-2 {
@@ -84,7 +91,7 @@ body::before {
 
 .scoreboard {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100%;
     padding: 10px;
     border-radius: 10px;
@@ -100,11 +107,11 @@ body::before {
     border-radius: 5px;
 }
 
-.player-1-score {
+#player-1-score {
     color: #1DD5ED;
 }
 
-.player-2-score {
+#player-2-score {
     color: #DF2136;
 }
 
@@ -133,19 +140,34 @@ body::before {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     border: 2px solid #2CFEFF;
+    transition-duration: 300ms;
+    
 }
 
 .cell.x {
     color: #1DD5ED;
     text-shadow: 0 0 15px #1DD5ED;
+    transition-duration: 0ms;
 }
 
 .cell.o {
     color: #F3C64B;
     text-shadow: 0 0 15px #F3C64B;
+    transition-duration: 0ms;
 }
 
 .player-name-input {
+    background: transparent;
+    border: none;
+    /* border-bottom: 2px solid white; */
+    color: white;
+    text-align: center;
+    font-size: 12px;
+    font-family: 'Press Start 2P', cursive;
+    outline: none;
+    width: 80%;
+}
+.player-name-input-main {
     background: transparent;
     border: none;
     border-bottom: 2px solid white;
@@ -154,7 +176,8 @@ body::before {
     font-size: 12px;
     font-family: 'Press Start 2P', cursive;
     outline: none;
-    width: 80%;
+    width: auto;
+    /* height: 15px */
 }
 
 .player-name-input::placeholder {
@@ -169,4 +192,96 @@ body::before {
 .x-symbol {
     color: #DF2136;
     text-shadow: 0 0 15px rgba(223, 33, 54, 0.8);
+}
+
+
+.player-symbol.o-symbol{
+    margin-top: 10px;
+}
+.player-symbol.x-symbol{
+    margin-top: 10px;
+}
+
+
+
+
+.maindiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10%;
+    width: 40%;
+    height: 80%;
+    border: 3px solid #2CFEFF;
+    border-radius: 10px;
+    box-shadow: 0 0 20px #00f;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.game-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    font-size: 4em;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+.x {
+    color: #1DD5ED;
+    text-shadow: 0 0 20px rgba(29, 213, 237, 0.9), 0 0 30px rgba(29, 213, 237, 0.8);
+}
+
+.o {
+    color: #F3C64B;
+    text-shadow: 0 0 25px rgba(243, 198, 75, 0.9), 0 0 30px rgba(243, 198, 75, 0.8);
+}
+
+.game-word {
+    color: #DF21C6;
+    text-shadow: 0 0 20px rgba(223, 33, 198, 0.9), 0 0 30px rgba(223, 33, 198, 0.8);
+}
+
+
+.button {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 14px;
+    width: 80%;
+    margin-top: 20px;
+    padding: 15px 20px;
+    background-color: #F3C64B;
+    color: white;
+    border: 3px solid #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0px 0px 10px #F3C64B;
+}
+#btn-start, #btn-new
+{
+    margin: 0;
+}
+.button:hover {
+    background-color: #ffcc00;
+    color: white;
+    box-shadow: 0px 0px 20px rgba(255, 223, 0, 1);
+    transform: scale(1.01);
+}
+.cell:hover{
+
+    /* width: 81px;
+    height: 81px; */
+    
+    /* margin-bottom: 3px;
+    margin-right: 3px; */
+    transition-duration: 200ms;
+    box-shadow: 0 0 20px #ffffff;
+
 }
